# bmcv

./: .gitignore  BMCV.kicad_pcb  BMCV.kicad_prl  BMCV.kicad_pro  BMCV.kicad_sch  BMCV.kicad_sym  CHANGELOG.md  MySymbols.kicad_sym  README.md  buttons.kicad_sch  encoders.kicad_sch  fp-info-cache  fp-lib-table  inputs_cv.kicad_sch  outputs.kicad_sch  power.kicad_sch  sym-lib-table
BMCV.pretty/: ALPHA_B10KX2.kicad_mod  ALPHA_B10KX2.step  BMCVPanel.kicad_mod  BMCVPanel.step  BMCVPanel2.step  CataclystPanel.kicad_mod  Crystal_SMD_2520-4Pin_2.5x2.0mm.kicad_mod  EC12PLRGBSDVBF.kicad_mod  EC12PLRGBSDVBF.step  Eurorack_Full_IDC_Vertical.kicad_mod  FSOP-8.kicad_mod  GENERIC_10_5mm_cap.step  GT-USB-7035E.kicad_mod  HVSSOP-8-1EP_3x3mm_P0.65mm_EP1.57x1.89mm.kicad_mod  HVSSOP-8-3x3.step  Jack_3.5mm_QingPu_WQP-PJ398SM_Vertical_CircularHoles.kicad_mod  LED_PUSH_BUTTON.step  PEL12D-4226G-S2024.step  PEL12D-4xxxS-Sxxxx.kicad_mod  PEL12T-4225S-S1024.step  PEL12T-4xxxS-S1024.kicad_mod  PEL12T-4xxxS-S1024.step  PJ-301Bx.kicad_mod  PJ-3412.kicad_mod  PJ-3412.step  PS45G.kicad_mod  PS60-10MC1BR10K.kicad_mod  PS60-10MC1BR10K.step  PS6010MC1BR10K.kicad_mod  PTA6043-2015CIB103.step  PTA6043-2015DPB103.step  PTA6043.kicad_mod  PTL6015xxxxxxx.kicad_mod  Potentiometer_Bourns_PTA4543_Single_Slide.kicad_mod  Pushbutton 6x6mm LED.kicad_mod  RA45D2F-21x-20D1-xxx.step  RA45DxF-21x-xxxx-xxx.kicad_mod  SomeSMDLEDSwitch.kicad_mod  (+11 more)
BMCVFirmware/: .clang-format  .clang-tidy  .clangd  .gitignore  BMCVFirmware.cfg  BMCVFirmware.ioc  BMCVFirmware.launch  CMakeLists.txt  mcuviewcfg.cfg  mcuviewer
BMCVFirmware/Core/Inc/: helpers.h  main.h  stm32g4xx_it.h  wavetables.h
BMCVFirmware/Core/Inc/Drivers/: buttons_encoders.h  dac_adc.h  dualmcp.h  fram.h  mcp.h  midi.h  ws2811.h
BMCVFirmware/Core/Inc/Lib/: assign.h  bmcv.h  channel.h  clock_sync.h  ctrl_button.h  envelope.h  scene.h  state.h  uxstate.h
BMCVFirmware/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
BMCVFirmware/Core/Src/Drivers/: dac_adc.c  dualmcp.c  fram.c  mcp.c  midi.c  ws2811.c
BMCVFirmware/Core/Src/Lib/: assign.c  bmcv.c  channel.c  clock_sync.c  ctrl_button.c  envelope.c  scene.c
BMCVFirmware/USB_Device/App/: usbd_desc.c
(+83 files in other folders)
